[package]
authors = [ "The syscall.rs Project Developers" ]
description = "Raw system calls"
documentation = "https://docs.rs/sc"
keywords = ["syscall", "system", "call"]
license = "MIT/Apache-2.0"
name = "sc"
readme = "README.md"
repository = "https://github.com/japaric/syscall.rs"
version = "0.2.3"

[dependencies]
compiler_builtins = {version = "0.1", optional = true}
core = {version = "1.0", optional = true, package = "rustc-std-workspace-core"}
alloc = {version = "1.0", optional = true, package = "rustc-std-workspace-alloc"}

[features]
default = ["rustc-dep-of-std"]
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "alloc"]

